# edu-practice-tasks

./: .gitignore  CMakeLists.txt  buildd.sh  buildr.sh
Task1/: CMakeLists.txt  main.cpp
